src/test/ui/impl-trait/recursive-type-alias-impl-trait-declaration-too-subtle-2.stderr
error: cannot implement trait on type alias impl trait
  --> $DIR/recursive-type-alias-impl-trait-declaration-too-subtle-2.rs:7:17
   |
LL | impl PartialEq<(Foo, i32)> for Bar {
   |                 ^^^
   |
note: type alias impl trait defined here
  --> $DIR/recursive-type-alias-impl-trait-declaration-too-subtle-2.rs:3:12
   |
LL | type Foo = impl PartialEq<(Foo, i32)>;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

